--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "*.ts": ["eslint --fix", "prettier --write", "git add"],
-  "*.js": ["prettier --write", "git add"]
+  "*.ts": ["eslint --fix", "prettier --write"],
+  "*.js": ["prettier --write"]
 }
