--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "prepare": "husky"
+    "prepare": "husky",
+    "format": "prettier . --write"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
     "nodemon": "^3.1.10",
+    "prettier": "3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
