--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/js": "^9.36.0",
     "@types/express": "^5.0.3",
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
+    "jiti": "^2.6.1",
     "lint-staged": "^16.2.3",
     "nodemon": "^3.1.10",
     "prettier": "3.6.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0"
   },
   "dependencies": {
     "express": "^5.1.0"
