--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@eslint/js": "^9.36.0",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
@@ -31,6 +32,7 @@
     "typescript-eslint": "^8.45.0"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   }
 }
