--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "prepare": "husky",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
